# atom-openwrt

./: README  config-1.0.config  config-2.0.config  config-atom.config  config-docker.config  config-wireguard.config  feeds.conf.default
package/base-files/: Makefile
package/feeds/lte/: ecmdemo
package/kernel/dta116x-devices/: Makefile
package/kernel/gpio-cpld/: Makefile
package/kernel/gpio-denverton/: Makefile
package/kernel/gpio-nct5523d/: Makefile
package/system/pnp-tunning/: Makefile
package/system/uci/: Makefile
package/utils/busybox/: Config-defaults.in
package/utils/quectel-CM/: Makefile
package/wav6/dwpal/: Makefile  dwpal.c  dwpal_cli.c  dwpal_ext.c  stats.c
package/wav6/dwpal/include/: dwpal.h  (+3 more)
package/wav6/iwlwav-dev/: Kconfig.local  local-symbols  versions
package/wav6/iwlwav-iw/: iw.h  iwlwav.c  mgmt.c  phy.c  scan.c  util.c
package/wav6/iwlwav-tools/: Makefile
package/wav6/swpal/: LICENSE  Makefile
package/wav6/swpal/src/: Makefile.am  uci_wrapper.c
package/wav6/swpal/src/include/: help_logging.h  uci_wrapper.h
package/wav6/wave_bin/: wave_components.ver
package/wlan_wave_feed_6x/WFA_Sigma_Test_Suite/: CheatSheet.txt  INTEL AP instruction.docx  Makefile  README  run.sh  test.sh
package/wlan_wave_feed_6x/dwpal/: Makefile
package/wlan_wave_feed_6x/iwlwav-driver/: Makefile
package/wlan_wave_feed_6x/iwlwav-hostap/: Makefile
package/wlan_wave_feed_6x/iwlwav-iw/: Makefile
package/wlan_wave_feed_6x/iwlwav-tools/: Makefile
package/wlan_wave_feed_6x/lq-wave-300_6x/: Makefile
package/wlan_wave_feed_6x/swpal/: Makefile
(+397 files in other folders)
